2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* Info.cs:
	* File.cs:
	* Xattr.cs:
	* Super.cs:
	* Consts.cs:
	* Structs.cs:
	* Encoding.cs:
	* AppleMFS.cs:
	* DiscImageChef.Filesystems.csproj: Separated Apple MFS plugin
	in different files.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* SysV.cs: Detect older version of the XENIX superblock (found
	in Lisa XENIX).

2016-07-31  Natalia Portillo  <claunia@claunia.com>

	* File.cs:
	* Super.cs: Corrected file size calculation.

2016-07-31  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* File.cs:
	* Info.cs:
	* Super.cs:
	* Consts.cs:
	* Structs.cs:
	* UCSDPascal.cs:
	* DiscImageChef.Filesystems.csproj: Added support for U.C.S.D.
	Pascal filesystem, closes #31

2016-07-31  Natalia Portillo  <claunia@claunia.com>

	* Super.cs: Reports correct filesystem version on Statfs();

2016-07-31  Natalia Portillo  <claunia@claunia.com>

	* File.cs: Code cleanup

2016-07-31  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* File.cs:
	* Super.cs:
	* Xattr.cs:
	* Consts.cs:
	* LisaFS.cs:
	* Structs.cs: Added support for subcatalogs.

2016-07-29  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Filesystems.csproj: Bump to version 3.1.0.

2016-07-29  Natalia Portillo  <claunia@claunia.com>

	* Filesystem.cs:
	* Dir.cs:
	* File.cs:
	* Super.cs:
	* Xattr.cs:
	* LisaFS.cs:
	* Consts.cs:
	* Extent.cs:
	* Structs.cs:
	* Encoding.cs: Added comments.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* File.cs:
	* Extent.cs:
	* Encoding.cs: Code re-styling.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* ODS.cs:
	* FFS.cs:
	* BFS.cs:
	* FAT.cs:
	* NTFS.cs:
	* APFS.cs:
	* HPFS.cs:
	* SysV.cs:
	* Opera.cs:
	* Acorn.cs:
	* BTRFS.cs:
	* extFS.cs:
	* ext2FS.cs:
	* ProDOS.cs:
	* MinixFS.cs:
	* Symbian.cs:
	* Structs.cs:
	* SolarFS.cs:
	* UNIXBFS.cs:
	* ISO9660.cs:
	* PCEngine.cs:
	* Nintendo.cs:
	* AppleMFS.cs:
	* AppleHFS.cs:
	* AmigaDOS.cs:
	* Dir.cs:
	* Filesystem.cs: